	* We can change UI-themes color and picture for "setup"
	* for testing use "EventSource" for update objects status. We don't have to "pooling" update every secondes, linknx send the objects when their value change
	to update knxweb design
	* Add EIS type for object on subpages parameters (credit Fraxinas)
	* Add Deutsch language (credit Fraxinas)


2012-11-11 Anthony Penhard v0.9.2
	* Released this before commit many changes for next version

2012-07-05 Anthony Penhard v0.9.2
	* Fixing bugs
	* Code review
	* Preparation for multilingual
	* Add a few new small features in rules, sub-pages, ...
	* Locked widget in edit mode 
	* Attach a widget to the Design so it display on all Zones who accept "global" widget 

2012-05-08 Anthony Penhard v0.9.1
	* Add new widget area, window, count
	* Add ioport in rules
	* Add version file
	
2012-03-11 Anthony Penhard
	* Add new Advanced widget slider
	* Add new widget vprogressbar (credit: Frederic G)
	* Add new parameters to sub-page widget for display in standard/dialog/hide-show "mode"
	* Add description to rules
	* Add Widgets List in "Edit design" and "Sub-pages"
	* Add ETS3 import if file's exist in ./ETS.xml display it in a tabs in "Objects"

2012-02-08 Anthony Penhard
	* Add first version of charts widgets with Highcharts 
	(highsoft software product is not free for commercial use lock at http://shop.highsoft.com/)
	* Add widgets/widgets.css "editor" in Admin section if file exist then we can use CSS Class in widgets Editor
	* Support mysql log in Admin section 
	* minor bugs fixed

2012-01-17 Anthony Penhard
	* Add first version of new widgets for testing (alarmclock, ephemeris, rssfeed)

2011-12-17 Anthony Penhard
	* Bugs Fixed in Rules Editor
	* Add Events Editor for "lite rules" with only 1 condition "timer" and "basic" actions "on-true"

2011-12-09 Anthony Penhard
	* Rules Editor

2011-11-27 Cyrille Demaret
	* Recoded all design part (view and edit)
	* Created check_install.php

2011-08-04 Anthony Penhard