@@ -1,0 +1,419 @@
+<?php
+$_lang = array();
+$_lang["language"] = "Italiano";
+$_lang['Loading, please wait'] = 'Caricamento in corso, attendere per favore';
+$_lang['Services status'] = 'Stato dei servizi';
+$_lang['ACTIVE'] = 'ATTIVO';
+$_lang['DESACTIVE'] = 'INATTIVO';
+$_lang['Object log (last "lines")'] = 'Log di un Object (le ultime "lines")';
+$_lang['Choose an Object'] = 'Scegliere un oggetto';
+$_lang['Config KnxWeb'] = 'Configurazione KnxWeb';
+$_lang['none'] = 'Nessuno';
+$_lang['File'] = 'File';
+$_lang['Mysql'] = 'Mysql';
+$_lang['Edit "widgets/widgets.css" file'] = 'Modifica file "widgets/widgets.css"';
+$_lang['linknx log files (last'] = 'File di Log di Linknx (';
+$_lang['lines)'] = 'linee)';
+$_lang['Network setup'] = 'Configurazione della rete';
+$_lang['DHCP'] = 'DHCP';
+$_lang['Static'] = 'Statica';
+$_lang['IP address'] = 'Indirizzo IP';
+$_lang['Netmask'] = 'Maschera di sottorete';
+$_lang['Gateway'] = 'Gateway';
+$_lang['DNS1 / DNS2'] = 'DNS1 / DNS2';
+$_lang['New version on cvs'] = 'Nuova versione disponibile';
+$_lang['(Empty = stdout)'] = '(Vuoto = stdout)';
+$_lang['(ex.: 0ms to 25.5s in steps of 100ms)'] = '(per es.: 0ms a 25.5s in passi di 100ms)';
+$_lang['(if specified, other parameters will be ignored)'] = '(se specificato, gli altri parametri saranno ignorati)';
+$_lang['(Log rotation will happen once this size reached)'] = '(Una volta raggiunta questa grandezza avverrà la rotazione dei log)';
+$_lang['(Older logs will be deleted once this number reach)'] = '(Una volta raggiunto questo numero saranno soppressi i vecchi log)';
+$_lang['a SMS'] = 'un SMS';
+$_lang['Actions'] = 'Azioni';
+$_lang['Active'] = 'Attivo';
+$_lang['Add a condition'] = 'Aggiunta di una condizione';
+$_lang['Add an action'] = 'Aggiunta di un\'azione';
+$_lang['Add an object'] = 'Aggiunta di un oggetto';
+$_lang['Add IO Port'] = 'Aggiunta di una porta IO';
+$_lang['Add new event'] = 'Aggiunta di un evento';
+$_lang['Add'] = 'Aggiunto';
+$_lang['Admin'] = 'Admin';
+$_lang['Administer'] = 'Amministrare';
+$_lang['All'] = 'Tutto';
+$_lang['an Email'] = 'un Email';
+$_lang['API id'] = 'id dell\'API';
+$_lang['At'] = 'A';
+$_lang['Attach to Design'] = 'Collegare al Design';
+$_lang['Attention please select two objects of compatible types, for more information on this condition, please see'] = 'Attenzione, selezionare 2 oggetti compatibili, per maggiori informazioni guardare qui';
+$_lang['Auto/Manu'] = 'Auto/Manuale';
+$_lang['Background color'] = 'Colore di sfondo';
+$_lang['Background image'] = 'Immagine di sfondo';
+$_lang['Base'] = 'Base';
+$_lang['Basic'] = 'Basico';
+$_lang['Clear'] = 'Cancellare';
+$_lang['Clear/Refresh'] = 'Cancellare/Refresh';
+$_lang['Refresh'] = 'Refresh';
+$_lang['Clickatell'] = 'Clickatell';
+$_lang['Clone sub-page'] = 'Duplicare la sottopagina';
+$_lang['Clone'] = 'Duplicare';
+$_lang['Color'] = 'Colore';
+$_lang['Command'] = 'Comando';
+$_lang['Condition'] = 'Condizione';
+$_lang['Configuration file (log4cpp)'] = 'File di configurazione di log (log4cpp)';
+$_lang['Configuration'] = 'Configurazione';
+$_lang['Count'] = 'Contatore';
+$_lang['Current Zone'] = 'Zona Corrente';
+$_lang['Custom'] = 'Personalizzato';
+$_lang['Data'] = 'Dato';
+$_lang['Database'] = 'Database';
+$_lang['Date constant'] = 'Costante';
+$_lang['Date variable'] = 'Variabile';
+$_lang['Date'] = 'Data';
+$_lang['Day/Month/Year'] = 'Giorno/Mese/Anno';
+$_lang['Debug'] = 'Debug';
+$_lang['Delay'] = 'Ritardo';
+$_lang['Delete event'] = 'Eliminare l\'evento';
+$_lang['Delete IO Port'] = 'Eliminare la porta IO';
+$_lang['Delete object'] = 'Eliminare l\'oggetto';
+$_lang['Delete rule'] = 'Eliminare la regola';
+$_lang['Delete'] = 'Cancellare';
+$_lang['Description'] = 'Descrizione';
+$_lang['Design height'] = 'Altezza del Design';
+$_lang['Design width'] = 'Larghezza del Design';
+$_lang['Design'] = 'Design';
+$_lang['disabled'] = 'disattivato';
+$_lang['Display "global" Widgets'] = 'Mostra i widgets "globali" ';
+$_lang['Dont Care'] = 'Non importa';
+$_lang['Duration'] = 'Durata';
+$_lang['During'] = 'Durante';
+$_lang['Edit design mobile'] = 'Modificare il design Mobile';
+$_lang['Edit design'] = 'Modificare il design';
+$_lang['Edit event'] = 'Modificare l\' evento';
+$_lang['Edit IO Port'] = 'Modificare la porta IO';
+$_lang['Edit object'] = 'Modificare l\'oggetto';
+$_lang['Edit'] = 'Modificare';
+$_lang['Enable slider'] = 'Attivare lo "Slider"';
+$_lang['Enable'] = 'Attivo';
+$_lang['End'] = 'Fine';
+$_lang['Error'] = 'Errore';
+$_lang['Evaluate'] = 'Valutare';
+$_lang['Event properties'] = 'Proprietà dell\'evento';
+$_lang['Events'] = 'Evento';
+$_lang['Every'] = 'Ogni';
+$_lang['Exception days'] = 'Giorno eccezionale';
+$_lang['Exception'] = 'Eccezione';
+$_lang['Execute'] = 'Eseguire';
+$_lang['Expected'] = 'Escluso';
+$_lang['False'] = 'Falso';
+$_lang['file'] = 'file';
+$_lang['Flags'] = 'Flags';
+$_lang['Flow'] = 'Flusso';
+$_lang['for Id use only alphanumeric characters, - , _ , and NO SPACES'] = 'per l\'Id utilizzare solo caratteri alfanumerici , - , _ , e NESSUNO SPAZIO';
+$_lang['Format of the logs'] = 'Formato del Log';
+$_lang['Formula : object'] = 'Formula : oggetto';
+$_lang['Framing'] = 'Inquadratura';
+$_lang['From number'] = 'Dal numero';
+$_lang['From object'] = 'Dall\'oggetto';
+$_lang['From'] = 'Da';
+$_lang['GAD'] = 'GAD';
+$_lang['General'] = 'Generale';
+$_lang['Geographic coordinate'] = 'Coordinate geografiche';
+$_lang['Height'] = 'Altezza';
+$_lang['here'] = 'qui';
+$_lang['Hexadecimal'] = 'Esadecimale';
+$_lang['Host'] = 'Host';
+$_lang['Hour constant'] = 'Ora costante';
+$_lang['Hour variable'] = 'Ora variabile';
+$_lang['Hour/Minute'] = 'Ore/Minuti';
+$_lang['Id rule'] = 'Id della regola';
+$_lang['Id_Event'] = 'Id dell\'evento';
+$_lang['Id'] = 'Id';
+$_lang['inet'] = 'inet';
+$_lang['Info'] = 'Info';
+$_lang['Initial value'] = 'Valore iniziale';
+$_lang['Insert widget'] = 'Inserire un Widget';
+$_lang['IO Port'] = 'Porta IO';
+$_lang['IO Ports'] = 'Porte IO';
+$_lang['IP'] = 'IP';
+$_lang['KNX connection'] = 'connessione KNX';
+$_lang['Label'] = 'Etichetta';
+$_lang['Latitude'] = 'Latitudine';
+$_lang['List design'] = 'Lista dei design';
+$_lang['List'] = 'Lista';
+$_lang['local'] = 'locale';
+$_lang['Locked'] = 'Bloccare';
+$_lang['Log File'] = 'File di Log';
+$_lang['Log Level'] = 'Livello di Log';
+$_lang['Log Linknx'] = 'Log di Linknx';
+$_lang['Log of Objects'] = 'Log degli Objets';
+$_lang['Log table'] = 'Tabella di Log';
+$_lang['Logging'] = 'Gestione dei Log';
+$_lang['Longitude'] = 'Longitudine';
+$_lang['Max log file index (log4cpp)'] = 'iIndice massimo per i files di Log (log4cpp)';
+$_lang['Max size (log4cpp)'] = 'Grandezza massima (log4cpp)';
+$_lang['Menu'] = 'Menu';
+$_lang['Message'] = 'Message';
+$_lang['Mode'] = 'Mode';
+$_lang['More information'] = 'Maggiori informazioni';
+$_lang['Mysql connecion'] = 'Connessione Mysql';
+$_lang['Name'] = 'Nome';
+$_lang['New design'] = 'Nuovo Design';
+$_lang['New sub-page'] = 'Nuova Sottopagina';
+$_lang['New zone'] = 'Nuova zona';
+$_lang['New Zone'] = 'Nuova Zona';
+$_lang['New'] = 'Nuovo';
+$_lang['No'] = 'No';
+$_lang['None'] = 'Nessuno';
+$_lang['Noon'] = 'Mezzogiorno';
+$_lang['Notice'] = 'Nota';
+$_lang['Number'] = 'Numero';
+$_lang['Object'] = 'Oggetto';
+$_lang['Objects'] = 'Oggetti';
+$_lang['Off value'] = 'Valore off';
+$_lang['Offset'] = 'Offset';
+$_lang['On value'] = 'Valore On';
+$_lang['or'] = 'oppure';
+$_lang['other (define a value)'] = 'altro (definire un valore)';
+$_lang['Other'] = 'Altro';
+$_lang['Password confirmation'] = 'Conferma password';
+$_lang['Password doesn\'t match'] = 'La password non corrisponde';
+$_lang['Password'] = 'Password';
+$_lang['persist (read from persistant storage)'] = 'persistente (leggere salvataggio persistente)';
+$_lang['Persistence directory'] = 'Directory persistenza';
+$_lang['Persistence log directory'] = 'Directory dei log di persistenza';
+$_lang['Persistence type'] = 'Tipo di persistenza';
+$_lang['Persistence table'] = 'Tabella di persistenza';
+$_lang['Persistent connection'] = 'Connexion Persistente';
+$_lang['Please select a section to administer in the left menu.'] = 'Scegliere una sezione da amministrare nel menù di sinistra.';
+$_lang['Please select a section to configure in the left menu.'] = 'Scegliere una sezione da configurare nel menù di sinistra.';
+$_lang['Port'] = 'Porta';
+$_lang['Programs Status'] = 'Stato dei programmi';
+$_lang['Programs'] = 'Programmi';
+$_lang['Properties'] = 'Proprietà';
+$_lang['raw'] = 'raw';
+$_lang['Read/write object value'] = 'Leggere/scrivere un oggetto';
+$_lang['Received value'] = 'Valore ricevuto';
+$_lang['Record value change'] = 'Registrazione a qualsiasi cambiamento di valore';
+$_lang['Refresh Subpages List'] = 'Attualizzare la lista'; //  des Sous-pages
+$_lang['Regular expression'] = 'Espressione regolare';
+$_lang['Reload events'] = 'Attualizzare gli eventi';
+$_lang['Reload XML'] = 'Attualizzare XML';
+$_lang['Remove Current Zone'] = 'Eliminare la Zona corrente';
+$_lang['Remove design'] = 'Eliminare il design';
+$_lang['Remove sub-page'] = 'Eliminare la sottopagina';
+$_lang['Remove zone'] = 'Eliminare la zona';
+$_lang['Remove'] = 'Eliminare';
+$_lang['request (read from bus)'] = 'richiesta (lettura dal bus)';
+$_lang['reset-delay'] = 'Resettare il delay';
+$_lang['rts-cts'] = 'rts-cts';
+$_lang['Rule on "Init" value'] = 'regola valutata all\'avvio di linknx';
+$_lang['Rule'] = 'regola';
+$_lang['Rules'] = 'regole';
+$_lang['RX Port'] = 'Porta RX';
+$_lang['Save Config'] = 'Salvare la Configuration';
+$_lang['Save rule'] = 'Salvare la regola';
+$_lang['Save'] = 'Salvare';
+$_lang['Script'] = 'Script';
+$_lang['seconde(s)'] = 'secondo(i)';
+$_lang['Send a new file'] = 'Inviare un nuovo file';
+$_lang['Send'] = 'Inviare';
+$_lang['Serial (RS232)'] = 'Seriale  (RS232)';
+$_lang['Serial port/hostname'] = 'Seriale Porta/hostname';
+$_lang['Server'] = 'Server';
+$_lang['Serveur SMTP'] = 'Server SMTP';
+$_lang['Serveur(:port)'] = 'Server(:porta)';
+$_lang['Simple'] = 'Semplice';
+$_lang['SMS gateway'] = 'SMS Gateway';
+$_lang['SMTP'] = 'SMTP';
+$_lang['Source Adress'] = 'Indirizzo sorgente';
+$_lang['Speed'] = 'Velocità';
+$_lang['Start'] = 'Inizio';
+$_lang['Stop'] = 'Fine';
+$_lang['Sub-page parameters'] = 'Parametri';
+$_lang['Sub-pages'] = 'Sottopagine';
+$_lang['Subject'] = 'Soggetto';
+$_lang['Subpage'] = 'Sottopagina';
+$_lang['Sunrise'] = 'Alba';
+$_lang['Sunset'] = 'Tramonto';
+$_lang['TCP'] = 'TCP';
+$_lang['text'] = 'testo';
+$_lang['threshold'] = 'soglia';
+$_lang['Time constant'] = 'Tempo constante';
+$_lang['Time variable'] = 'Tempo variabile';
+$_lang['Timeout (in "raw" mode)'] = 'Timeout (in modalità "raw")';
+$_lang['Timer'] = 'Timer';
+$_lang['(you can visit'] = '(potete vedere';
+$_lang['this page'] = 'questa pagina';
+$_lang['to find your coordinates)'] = 'per trovare le vostre coordinate)';
+$_lang['To object'] = 'Per l\'oggetto';
+$_lang['To'] = 'Per';
+$_lang['Trigger'] = 'Avviare(Trigger)';
+$_lang['True'] = 'Vero';
+$_lang['Try design'] = 'Test del Design';
+/* Day / jour */
+$_lang['Mo'] = 'Lu';
+$_lang['Tu'] = 'Ma';
+$_lang['We'] = 'Me';
+$_lang['Th'] = 'Gi';
+$_lang['Fr'] = 'Ve';
+$_lang['Sa'] = 'Sa';
+$_lang['Su'] = 'Do';
+$_lang['Type'] = 'Tipo';
+$_lang['UDP'] = 'UDP';
+$_lang['unix'] = 'unix';
+$_lang['Until'] = 'Fino a';
+$_lang['Use external URL'] = 'Utilizzare l\'URL esterno';
+$_lang['Username'] = 'Username';
+$_lang['Valid'] = 'Validare';
+$_lang['Value'] = 'Valore';
+$_lang['Var'] = 'Variabile';
+$_lang['View Xml'] = 'Visualizzare l\' Xml';
+$_lang['View'] = 'Visualizzare';
+$_lang['Warn'] = 'Avviso';
+$_lang['Warning: log parameters depends on linknx\'s compilation options (internal logger or log4cpp)'] = 'Avviso: la parametrizzazione dei log dipende dalle opzioni di compilazione di linknx\'s (log interno o log4cpp)';
+$_lang['Weekday'] = 'Giorno della settimana';
+$_lang['Widget information'] = 'Informazioni sul Widget';
+$_lang['Widget type'] = 'Tipo di Widget';
+$_lang['Widgets List'] = 'Lista dei Widgets';
+$_lang['Width'] = 'Larghezza';
+$_lang['XML server type : port'] = 'Server XML : porta';
+$_lang['XML source'] = 'Sorgente Xml';
+$_lang['Select a rule'] = 'Selezionare una regola';
+$_lang['xon-xoff'] = 'xon-xoff';
+$_lang['Yes'] = 'Sì';
+$_lang['Zone background'] = 'Sfondo della zona';
+$_lang['(If you change this value, you can not access linknx with knxweb without adapting your configuration in the Admin section)'] = '(Se cambiate questo valore dovrete anche modificare la configurazione nella sezione Admin)';
+$_lang['Zones List'] = 'Lista delle Zone';
+$_lang['Resolution'] = 'Risoluzione';
+$_lang['Repository'] = 'Repository';
+$_lang['Repository of Subpages'] = 'Repository delle sottopagine';
+$_lang['Sub-pages List'] = 'Lista delle sottopagine';
+$_lang['Repository of Widgets'] = 'Repository dei Widgets';
+$_lang['Version'] = 'Versione';
+$_lang['Download the Widget'] = 'Il download del widget';
+$_lang['is complete'] = 'è completo';  
+$_lang['Cancel'] = 'Annullare';
+$_lang['Ok'] = 'Ok';
+$_lang['Apply'] = 'Applicare';
+$_lang['by default : "cwtu"'] = 'default : "cwtu"';
+$_lang['Communication'] = 'Comunicazione';
+$_lang['Read'] = 'Leggere';
+$_lang['Write'] = 'Scrivere';
+$_lang['Transmit'] = 'Trasmissione';
+$_lang['Update'] = 'Update';
+$_lang['Stateless'] = 'Stateless';
+$_lang['Force Write'] = 'Forzare la scrittura';
+$_lang['Grid'] = 'Griglia';
+$_lang['Effects'] = 'Effetti';
+$_lang['Random'] = 'Random';
+$_lang['Widget size attach to the Grid'] = 'Attaccare alla griglia la grandezza dei widgets';
+$_lang['Floating Widgets'] = 'Floating Widgets';
+$_lang['Margin Widgets'] = 'Margine dei Widgets';
+$_lang['Subpage name'] = 'Nome della Sottopagina';
+$_lang['Design saved successfully'] = 'Design salvato con successo';
+$_lang['Config saved successfully reload the web page for take effect in KnxWeb immediately'] = 'Configurazione registrata con successo, ricaricare la pagina per visualizzare immediatamente l\'effetto in KnxWeb';
+$_lang['Save Rule'] = 'Salvare la regola';
+$_lang['Registration rule successfully'] = 'Regola registrata con successo';
+$_lang['Please select an objet'] = 'Per favore selezionare un oggetto nella lista';
+$_lang['Attention'] = 'Attenzione';
+$_lang['Error'] = 'Errore';
+$_lang['You cannot delete this Object because it\'s used in a rule.'] = 'Impossibile cancellare l\'oggetto perchè è utilizzato in una regola';
+$_lang['Error: '] = 'Errore: ';
+$_lang['Curve'] = 'Curva';
+$_lang['Download'] = 'Download';
+$_lang['Already downloaded'] = 'Già scaricato';
+$_lang['Up to date'] = 'Aggiornato';
+$_lang['Nombre maximum d\'action atteint'] = 'Numero massimo di azioni raggiunto';
+$_lang['Action True'] = 'Azione Vera';
+$_lang['Action False'] = 'Azione Falsa';
+
+
+$_lang['New page'] = 'Nuova pagina';
+$_lang['Remove page'] = 'Eliminare la pagina';
+$_lang['Slider'] = 'Slide';
+$_lang['Flip toggle switch'] = 'Flip toggle switch';
+$_lang['List divider'] = 'List divider';
+$_lang['Button'] = 'Bottone';
+$_lang['Button Group'] = 'Gruppo di bottoni';
+$_lang['Radio swicth'] = 'Radio Button';
+$_lang['Select'] = 'Select';
+$_lang['Text'] = 'Text';
+$_lang['Html'] = 'Html';
+$_lang['Fieldcontain'] = 'Fieldcontain';
+$_lang['ID'] = 'ID';
+$_lang['Add a widget'] = 'Aggiungere un widget';
+$_lang['Choose a Widget'] = 'Scegliere un Widget';
+$_lang['Prepend/Append'] = 'Preporre/Aggiungere';
+$_lang['Add Mobile Widget'] = 'Aggiungere un Widget Mobile';
+$_lang['Previous'] = 'Precedente';
+$_lang['Edit a'] = 'Modificare un';
+$_lang['Toggleswicth'] = 'Toggleswicth';
+$_lang['Miniature'] = 'Miniature';
+$_lang['Off'] = 'Off';
+$_lang['On'] = 'On';
+$_lang['Theme'] = 'Tema';
+$_lang['Highlight'] = 'Evidenziare';
+$_lang['Minimum'] = 'Minimo';
+$_lang['Maximum'] = 'Massimo';
+$_lang['Track'] = 'Traccia';
+$_lang['Radioswicth'] = 'Radioswicth';
+$_lang['Orientation'] = 'Orientamento';
+$_lang['Vertical'] = 'Verticale';
+$_lang['Horizontal'] = 'Orizzontale';
+$_lang['Actionlist'] = 'Actionlist';
+$_lang['Object status'] = 'Stato dell\'oggetto';
+$_lang['Items'] = 'Articoli';
+$_lang['New Item'] = 'Nuovo articolo';
+$_lang['Listview'] = 'Listview';
+$_lang['Divider Theme'] = 'Divider Theme';
+$_lang['Inset'] = 'Inserire';
+$_lang['Link to page'] = 'Link alla pagina';
+$_lang['Count Bubble Text'] = 'Count Bubble Text';
+$_lang['New Button'] = 'Nuovo bottone';
+$_lang['Inline'] = 'In linea';
+$_lang['Goto'] = 'Andare a';
+$_lang['html tag a'] = 'tag html a';
+$_lang['html tag li'] = 'tag html li';
+$_lang['Transitions'] = 'Transizioni';
+$_lang['Icone'] = 'Icone';
+$_lang['Left arrow'] = 'Freccia sinistra';
+$_lang['Right arrow'] = 'Freccia destra';
+$_lang['Up arrow'] = 'Freccia in alto';
+$_lang['Down arrow'] = 'Freccia in basso';
+$_lang['Plus'] = 'Più';
+$_lang['Minus'] = 'Meno';
+$_lang['Check'] = 'Verificare';
+$_lang['Gear'] = 'Equipaggiamento';
+$_lang['Forward'] = 'Avanti';
+$_lang['Back'] = 'Indietro';
+$_lang['Star'] = 'Stella';
+$_lang['Alert'] = 'Allarme';
+$_lang['Home'] = 'Home';
+$_lang['Search'] = 'Ricerca';
+$_lang['Left'] = 'Sinistra';
+$_lang['Top'] = 'Alto';
+$_lang['Bottom'] = 'Basso';
+$_lang['Right'] = 'Destra';
+$_lang['No Text'] = 'Nessun Testo';
+$_lang['Role'] = 'Ruolo';
+$_lang['list-divider'] = 'list-divider';
+$_lang['Xml'] = 'Xml';
+$_lang['Footer Link List'] = 'Footer Link List';
+$_lang['Page'] = 'Pagina';
+$_lang['Portrait'] = 'Portrait';
+$_lang['Landscape'] = 'Landscape';
+$_lang['Home button'] = 'Bottone home';
+$_lang['Back button'] = 'Bottone precedente';
+$_lang['Title Page'] = 'Titolo della pagina';
+$_lang['Footer'] = 'Fondo della pagina';
+$_lang['Update File'] = 'Attualizzare il file';
+$_lang['Reload'] = 'Ricaricare';
+
+$_lang['Sub-page properties'] = 'Proprietà della sottopagina';
+$_lang['Design properties'] = 'Proprietà del Design';
+$_lang['of'] = 'di';
+
+/*             
+$_lang[''] = '';
+*/
+
+?>
