@@ -11,6 +11,7 @@
 	to update knxweb design
 	* Add EIS type for object on subpages parameters (credit Fraxinas)
 	* Add Deutsch language (credit Fraxinas)
+	* Add Italiano language (credit Max S.)
 
 
 2012-11-11 Anthony Penhard v0.9.2
